--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  padding-bottom: 50px;
+  position: relative;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.left-shape, .line-shape, .right-shape, .wave-shape, .circle-shape {
+  position: absolute;
+}
+.left-shape {
+  top: 160px;
+  left: 0;
+}
+.line-shape {
+  top: 230px;
+  left: 50px;
+}
+.right-shape {
+  bottom: 0;
+  right: 0;
+}
+.wave-shape {
+  top: 529px;
+  left: 0px;
+  width: 100px;
+  transform: translateX(-40%);
+}
+.circle-shape {
+  top: 160px;
+  right: -45px;
+  transform: rotate(-130deg);
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
