added media query

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,3 +6,10 @@ h1.title {
     font-family: 'Brandon Grotesque Black', sans-serif;
     text-align: center;
 }
+
+@media (max-width: 920px) {
+    h1.title {
+        margin-bottom: 50px;
+        font-size: 46px;
+    }
+}
