--- a/src/components/AddBtn/AddBtn.scss
+++ b/src/components/AddBtn/AddBtn.scss
@@ -41,4 +41,27 @@
 }
 }
 
+@media (max-width: 920px) {
+    .row-btn-add {
+   
+    .wrap-big-btn-add {
+        height: 56px;
+        width: 56px;
+    
+        .big-btn-add {
+            height: 41px;
+            width: 41px;
+            font-size: 41px;
+            line-height: 41px;
+        }
+    }
+    }
+}
+
+@media (max-width: 560px) {
+    .row-btn-add {
+        transform: translateX(-10%);
+    }
+}
+
 
