added new font-family

--- a/src/components/AddBtn/AddBtn.scss
+++ b/src/components/AddBtn/AddBtn.scss
@@ -31,7 +31,7 @@
         border: none;
         box-shadow: 0 12px 12px 0 rgba(61,234,214,0.3);
         color: #fff;
-        font-family: "Brandon Grotesque Bold", sans-serif;
+        font-family: "Brandon Grotesque Bold",'Josefin Sans', sans-serif;
         font-size: 56px;
         text-align: center;
         line-height: 71px;
