--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@ h1.title {
     font-size: 56px;
     letter-spacing: 1px;
     margin-bottom: 80px;
-    font-family: 'Brandon Grotesque Black', sans-serif;
+    font-family: 'Brandon Grotesque Black','Josefin Sans', sans-serif;
     text-align: center;
 }
 
