--- a/src/components/NewGroupPeopleWithSubgroup/NewGroupPeopleWithSubgroup.scss
+++ b/src/components/NewGroupPeopleWithSubgroup/NewGroupPeopleWithSubgroup.scss
@@ -78,7 +78,7 @@
             border: none;
             box-shadow: 0 12px 12px 0 rgba(61,234,214,0.3);
             color: #fff;
-            font-family: "Brandon Grotesque Bold", sans-serif;
+            font-family: "Brandon Grotesque Bold",'Josefin Sans', sans-serif;
             font-size: 32px;
             text-align: center;
             line-height: 36px;
